--- a/Mathematical Cryptography/Mathematical Cryptography.vcxproj.filters
+++ b/Mathematical Cryptography/Mathematical Cryptography.vcxproj.filters
@@ -52,5 +52,8 @@
     <ClInclude Include="GLOBAL_VARIABLES.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="HILL_CIPHER.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
